added dropdown logo's

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <div class="dropdown">
       <button class="dropBTN">Account <i class="fa-solid fa-circle-user" style="font-size: 25px"></i></button>
       <div class="dropdownContent">
-        <a href="#">Sign out</a>
+        <a href="#">Sign out <i class="fa-solid fa-right-from-bracket"></i></a>
         <a href="#">View subscriptions</a>
-        <a href="#">Settings</a>
+        <a href="#">Settings <i class="fa-solid fa-gear"></i></a>
       </div>
     </div>
   </div>
