Fixed navbar + added responsiveness

--- a/index.html
+++ b/index.html
@@ -30,14 +30,12 @@
 
 </header>
 
-<!-- Your website content goes in main-->
-<main>
-
-  <section class="mainSectionOne">
-    websites content (CHANGE SECTION HEIGHT TO FIT CONTENT AND REMOVE BORDER IN CSS!!!!!)
-  </section>
-
-</main>
+<!-- Your website content goes in sections-->
+<div class="main">
+<section class="mainSectionOne">
+  websites content (CHANGE SECTION HEIGHT TO FIT CONTENT AND REMOVE BORDER IN CSS!!!!!)
+</section>
+</div>
 
 <footer>
 
