--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
 </header>
 
 <!-- Your website content goes in sections-->
-<div class="main">
+<main>
 <section class="mainSectionOne">
   websites content (CHANGE SECTION HEIGHT TO FIT CONTENT AND REMOVE BORDER IN CSS!!!!!)
 </section>
 </div>
-
+</main>
 <footer>
 
   <div class="footerContainer">
